[project]
name = "region-scan"
version = "0.1.0"
description = "区域路口扫描与试点选择 · 全域信号路口体检 + 试点推荐榜（复用 intersection_agent 诊断能力）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "intersection-agent",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
region-scan = "region_scan.cli:main"

[tool.uv.sources]
intersection-agent = { path = "../backend", editable = true }

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["region_scan*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
